# enzymenet-cli

./: .gitignore  Dockerfile  LICENSE  README.md  README_pypi.md  docker-compose.yml  pyproject.toml
cli/enzymenet_cli/: cli.py
enzymenet/: __main__.py  cli.py  modeling.py  predict.py  preprocess.py
